k8s/taskerservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taskerservice-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component:  taskerservice
    spec:
      containers:
        - name: taskerservice-container
          image: vinit5619692/taskerservice:v4
          ports:
            - containerPort:  9000
  selector:
    matchLabels:
      component:  taskerservice
