k8s/taskerui-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taskerui-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component:  taskerui
    spec:
      containers:
        - name: taskerui-container
          image: vinit5619692/taskerui:v3
          ports:
            - containerPort:  8080
  selector:
    matchLabels:
      component:  taskerui
