k8s/taskerservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskerservice-service
spec:
  selector:
    component: taskerservice
  type: ClusterIP
  ports:
    - port:  9000
      targetPort: 9000
