k8s/taskerui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskerui-service
spec:
  selector:
    component: taskerui
  type: ClusterIP
  ports:
    - port:  80
      targetPort: 80
