k8s/ingressservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskerservice-ingress
spec:
  rules:
    - http:
        paths:
          - path: /v2/*
            pathType: Prefix
            backend:
              service:
                name: taskerservice-service
                port:
                  number: 9000
